@@ -1,3 +1,10 @@
+2008-04-24  Bastian Maerkisch  <bmaerkisch@web.de>
+
+	* src/win/wgnuplib.h src/win/wgraph.c:  Separate the status line from
+	the plot canvas. XOR drawing is replaced by full overwrites.
+	Status line no longer contains garbled text.
+	Bug #1520692
+
 2008-04-23  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/datafile.c (df_tokenise df_read_matrix): If missing or bad data is
